[gd_scene load_steps=13 format=2]

[ext_resource path="res://asset/inventory/sprites/x_normal.png" type="Texture" id=1]
[ext_resource path="res://asset/inventory/sprites/x_pressed.png" type="Texture" id=2]
[ext_resource path="res://asset/inventory/sprites/main panel.png" type="Texture" id=3]
[ext_resource path="res://asset/inventory/sprites/x_hover.png" type="Texture" id=4]
[ext_resource path="res://asset/inventory/sprites/x_disabled.png" type="Texture" id=5]
[ext_resource path="res://asset/inventory/sprites/title.png" type="Texture" id=6]
[ext_resource path="res://asset/font/Arcadepix Plus.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://asset/font/quantity_lbl.tres" type="DynamicFont" id=8]
[ext_resource path="res://asset/inventory/sprites/inner_panel.png" type="Texture" id=9]
[ext_resource path="res://src/UI/Split_stack.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[node name="Split_stack" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.117647, 0.117647, 0.784314 )
script = ExtResource( 10 )
qty_slider = NodePath("main_panel/Setting_list/Inventory/quantity+slider")
lbl_original = NodePath("main_panel/Setting_list/Inventory/original_quantity")
lbl_new = NodePath("main_panel/Setting_list/Inventory/new_quantity")

[node name="main_panel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -27.5
margin_right = 89.0
margin_bottom = 27.5
texture = ExtResource( 3 )
region_rect = Rect2( 1.61024, 2.21022, 27.6804, 26.6629 )
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 8
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="title" type="NinePatchRect" parent="main_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_top = -12.0
margin_right = 68.0
margin_bottom = 12.0
texture = ExtResource( 6 )
patch_margin_left = 11
patch_margin_top = 6
patch_margin_right = 9
patch_margin_bottom = 2

[node name="Label" type="Label" parent="main_panel/title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
custom_fonts/font = SubResource( 1 )
text = "Split"
align = 1
valign = 1

[node name="CloseBTN" type="TextureButton" parent="main_panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = -1.0
margin_bottom = 10.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Setting_list" type="VBoxContainer" parent="main_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 13.0
margin_right = -9.0
margin_bottom = -7.0
custom_constants/separation = 2

[node name="Inventory" type="NinePatchRect" parent="main_panel/Setting_list"]
margin_right = 158.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
texture = ExtResource( 9 )
region_rect = Rect2( 0.989311, 0.110748, 17.262, 18.1427 )
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="main_panel/Setting_list/Inventory"]
margin_left = 50.0
margin_right = 115.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
custom_fonts/font = SubResource( 2 )
text = "quantity"
align = 1

[node name="original_quantity" type="Label" parent="main_panel/Setting_list/Inventory"]
margin_left = 113.0
margin_right = 155.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
custom_fonts/font = SubResource( 2 )
text = "10"
align = 2

[node name="new_quantity" type="Label" parent="main_panel/Setting_list/Inventory"]
margin_left = 2.0
margin_right = 47.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.266667, 0.243137, 0.243137, 1 )
custom_fonts/font = SubResource( 2 )
text = "10"

[node name="quantity+slider" type="HSlider" parent="main_panel/Setting_list/Inventory"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -5.0
margin_right = 76.0
margin_bottom = 11.0
min_value = 0.5
max_value = 1.5
step = 0.1
value = 1.0

[node name="btn_split" type="Button" parent="main_panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -10.0
margin_right = 45.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 8 )
text = "Split"

[connection signal="pressed" from="main_panel/CloseBTN" to="." method="_on_CloseBTN_pressed"]
[connection signal="value_changed" from="main_panel/Setting_list/Inventory/quantity+slider" to="." method="_on_quantityslider_value_changed"]
[connection signal="pressed" from="main_panel/btn_split" to="." method="_on_btn_split_pressed"]
